--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,49 @@
     <modules>
         <module>core-generator</module>
         <module>hdfsreader-generator</module>
+        <module>generator-dist</module>
     </modules>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
+        <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
+    </properties>
 
+    <dependencyManagement></dependencyManagement>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>${maven-assembly-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <skip>false</skip><!--not skip compile test classes-->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
+    <repositories>
+        <repository>
+            <id>thinkingdata</id>
+            <url>http://app:8083/nexus/content/groups/thinkingdata/</url>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>nexus-thinkingdata</id>
+            <name>Nexus Release Repository</name>
+            <url>http://app:8083/nexus/content/repositories/thirdparty/</url>
+        </repository>
+    </distributionManagement>
 </project>
