--- a/pom.xml
+++ b/pom.xml
@@ -44,16 +44,17 @@
 
     <repositories>
         <repository>
-            <id>thinkingdata</id>
-            <url>http://app:8083/nexus/content/groups/thinkingdata/</url>
+            <id>nexus-aliyun</id>
+            <name>Nexus aliyun</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
         </repository>
     </repositories>
 
     <distributionManagement>
         <repository>
-            <id>nexus-thinkingdata</id>
-            <name>Nexus Release Repository</name>
-            <url>http://app:8083/nexus/content/repositories/thirdparty/</url>
+            <id>nexus-aliyun</id>
+            <name>Nexus aliyun</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
         </repository>
     </distributionManagement>
 </project>
