--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 # BlueJ files
 *.ctxt
 
+.idea/*
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -101,4 +103,4 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-/.idea/
+
